@@ -867,6 +867,9 @@
     "not-of-your-business": "**TOP SECRET**\nThe things I do, or don't do, are none of your business. :3",
     "title": "{{user}}'s transactions | Page {{page}}",
     "banned-user": "Thi suser is banned from Menhera!",
+    "select-type": "Chose a transaction class",
+    "select-user": "Choose an user",
+    "select-currency": "Choose the currency",
     "transactions": {
       "base": "**• **[<t:{{unix}}:d><t:{{unix}}:T> - <t:{{unix}}:R>] **-** ",
       "menhera_to_you": "**I** sent **you** **{{amount}}** {{currencyType}} {{emoji}} for {{reason}}",
@@ -881,30 +884,55 @@
     },
     "reasons": {
       "simon_says_add": "simon says",
+      "simon_says_title": "Simons Says",
+      "simon_says_remove_title": "Simons Says",
+      "simon_says_set_title": "Simons Says",
+      "simon_says_add_title": "Simons Says",
       "simon_says_remove": "simon says",
       "simon_says_set": "simon says",
       "simon_says": "simon says",
       "pix_command": "a gift",
+      "pix_command_title": "Gifts from /gift",
       "blackjack_command": "betting on blackjack",
+      "blackjack_command_title": "Bet on /blackjack",
       "blackjack_lost_data": "losing blackjack data",
+      "blackjack_lost_data_title": "Blackjack Complications",
       "coinflip_command": "betting on coinflip",
+      "coinflip_command_title": "Bet on /coinflip",
       "hunt_command": "hunting with Xandão",
+      "hunt_command_title": "Hunt on /hunt",
       "roulette_command": "betting on roulette",
+      "roulette_command_title": "Bet on /roulette",
       "win_bicho": "winning the animal's",
+      "win_bicho_title": "Win on /animal",
       "bicho_command": "betting on animal's game",
+      "bicho_command_title": "Bet on /animal",
       "sell_hunt": "selling hunts",
+      "sell_hunt_title": "Sell Hunts",
       "buy_color": "buying color",
+      "buy_color_title": "Buy Colors",
       "buy_roll": "buying rolls",
+      "buy_roll_title": "Buy Rolls",
       "buy_item": "buying magic items",
+      "buy_item_title": "Buy Magic Ittems",
       "buy_image": "buying images",
+      "buy_image_title": "Buy Images",
       "buy_image_royalty": "profit sharing in image",
+      "buy_image_royalty_title": "Image Creation Bonus",
       "buy_theme": "buying themes",
+      "buy_theme_title": "Buy Themes",
       "buy_theme_royalty": "profit sharing in theme",
+      "buy_theme_royalty_title": "Designer Bonus",
       "vote_thank": "voting for me >,<",
+      "vote_thank_title": "Votes on top.gg",
       "inactivity_punishment": "being inactive on Menhera",
+      "inactivity_punishment_title": "Inactivity",
       "poker_command": "betting on poker",
+      "poker_command_title": "Bet on /poker",
       "sell_plant": "selling plants",
-      "buy_seed": "buying seeds"
+      "sell_plant__title": "Sell Plants",
+      "buy_seed": "buying seeds",
+      "buy_seed_title": "Buy Seeds"
     }
   },
   "poker": {
