@@ -872,6 +872,9 @@
     "not-of-your-business": "**SEGREDO DE ESTADO**\nAs coisas que eu faço, ou deixo de fazer, não são da tua conta :3",
     "title": "Transações de {{user}} | Página {{page}}",
     "banned-user": "Este usuário está banido da Menhera!",
+    "select-type": "Escolha o tipo de transação",
+    "select-user": "Escolha um usuário",
+    "select-currency": "Escolha a moeda",
     "transactions": {
       "base": "**• **[<t:{{unix}}:d><t:{{unix}}:T> - <t:{{unix}}:R>] **-** ",
       "menhera_to_you": "**Eu** **te** enviei **{{amount}}** {{currencyType}} {{emoji}} por {{reason}}",
@@ -885,31 +888,56 @@
       "you_to_you": "c2V4bwo="
     },
     "reasons": {
-      "simon_says_add": "que o mestre mandou",
       "simon_says": "que o mestre mandou",
+      "simon_says_title": "O Mestre Mandou",
+      "simon_says_remove_title": "O Mestre Mandou",
+      "simon_says_add_title": "O Mestre Mandou",
+      "simon_says_set_title": "O Mestre Mandou",
+      "simon_says_add": "que o mestre mandou",
       "simon_says_remove": "que o mestre mandou",
       "simon_says_set": "que o mestre mandou",
       "pix_command": "presente no pix",
+      "pix_command_title": "Enviar /pix",
       "blackjack_command": "apostar no blackjack",
+      "blackjack_command_title": "Apostar no /blackjack",
       "blackjack_lost_data": "perder os dados do blackjack",
+      "blackjack_lost_data_title": "Complicações no /blackjack",
       "coinflip_command": "apostar no coinflip",
+      "coinflip_command_title": "Apostar no /coinflip",
       "hunt_command": "caçar com Xandão",
+      "hunt_command_title": "Caçar em /caçar",
       "roulette_command": "apostar na roleta",
+      "roulette_command_title": "Apostar no /roleta",
       "win_bicho": "vencer no jogo do bicho",
+      "win_bicho_title": "Sorteado no /bicho",
       "bicho_command": "apostar no jogo do bicho",
+      "bicho_command_title": "Apostar no /bicho",
       "sell_hunt": "vender caças",
+      "sell_hunt_title": "Vender caças",
       "buy_color": "comprar cor",
+      "buy_color_title": "Comprar Cores",
       "buy_roll": "comprar roll",
+      "buy_roll_title": "Comprar Rolls",
       "buy_item": "comprar item mágico",
+      "buy_item_title": "Compras Itens Mágicos",
       "buy_image": "comprar imagem",
+      "buy_image_title": "Comprar Imagens",
       "buy_image_royalty": "participação de lucros em imagem",
+      "buy_image_royalty_title": "Bônus de Criação",
       "buy_theme": "comprar tema",
+      "buy_theme_title": "Comprar Temas",
       "buy_theme_royalty": "participação de lucros em tema",
+      "buy_theme_royalty_title": "Bônus de Designer",
       "vote_thank": "votar em mim >,<",
+      "vote_thank_title": "Votar no top.gg",
       "inactivity_punishment": "ficar inativo na Menhera",
+      "inactivity_punishment_title": "Inatividade",
       "poker_command": "apostar no poker",
+      "poker_command_title": "Apostar no /poker",
       "sell_plant": "vender plantas",
-      "buy_seed": "comprar sementes"
+      "sell_plant_title": "Vender Plantas",
+      "buy_seed": "comprar sementes",
+      "buy_seed_title": "Comprar Sementes"
     }
   },
   "poker": {
